--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
   margin-top: 10vh;
+  height: 100%;
+  background-image: url('/assets/images/stand-generator-background.png');
+  background-size: cover; 
 }
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
