--- a/src/Components/Canvas/Canvas.css
+++ b/src/Components/Canvas/Canvas.css
@@ -1,3 +1,10 @@
-#main-display {
-  border: 1px solid black
+.background-button {
+  font-size: 1.5rem;
+  background: transparent;
+  border-bottom: 3px solid black inset;
+  border-left: 4px solid black inset;
+}
+
+.background-button:focus{
+  outline: none;
 }
